[package]
name = "slog-stream"
version = "2.0.0-alpha1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "`io::Write` streamer for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical", "stream"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-stream/"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/stream"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { git="http://github.com/slog-rs/slog", branch = "2.x.y" }
slog-extra = { git="http://github.com/slog-rs/extra", branch = "2.x.y"}
thread_local = "0.2.6"
