[package]
name = "slog-stream"
version = "1.2.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
description = "`io::Write` streamer for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical", "stream"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-stream"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/stream"
readme = "README.md"

[dependencies]
slog = "2"
slog-async = "2"
thread_local = "1"
